# YATAP

./: README.md
backend/: .env  .gitignore  pyproject.toml
backend/app/: config.py  database.py  main.py  router.py
backend/app/core/auth/: dependencies.py  models.py  routes.py  schemas.py  services.py  utils.py
backend/app/core/health/: routes.py
backend/app/core/users/: exceptions.py  models.py  routes.py  schemas.py
backend/app/features/todos/: models.py  routes.py  schemas.py
backend/app/lib/: base_models.py  base_schemas.py
backend/migrations/models/: 0_20241219015049_init.py
backend/scripts/: aerich_init.sh  aerich_migrate.sh  format.sh  lint.sh  test.sh
backend/tests/: test_auth.py
